Update projects on home page, fix spacing around slider

--- a/css/main.css
+++ b/css/main.css
@@ -182,7 +182,7 @@ header {
 main {
   position: relative;
   top: -1rem;
-  padding-bottom: 1rem;
+  padding-bottom: 2.4rem;
   background-color: #ECECEC;
 }
 
